<resources>
    <string name="app_name">KOT_Calculator</string>
    <string name="textview">TextView</string>
    <string name="_9">9</string>
    <string name="Division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="clr">CLR</string>
    <string name="_0">0</string>
    <string name="Suma">+</string>
    <string name="Resultado">=</string>
    <string name="Resta">-</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="Multiplicacion">*</string>
    <string name="Decimal">.</string>
</resources>